gitignore added to the project

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -10,11 +10,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -Wall -Wextra -pedantic")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
-add_executable(src/fib_recursive fib_recursive.cpp)
-add_executable(src/fib_iteration fib_iteration.cpp)
-add_executable(src/fib_threads fib_threads.cpp)
-add_executable(src/fib_compile-time fib_compile-time.cpp)
-add_executable(src/fib_compile-time-array fib_compile-time-array.cpp)
+add_executable(fib_recursive src/fib_recursive.cpp)
+add_executable(fib_iteration src/fib_iteration.cpp)
+add_executable(fib_threads src/fib_threads.cpp)
+add_executable(fib_compile-time src/fib_compile-time.cpp)
+add_executable(fib_compile-time-array src/fib_compile-time-array.cpp)
 ## additional SFINAE examples
-add_executable(src/template_type_parameter_sfinae_guard template_type_parameter_sfinae_guard.cpp)
-add_executable(src/template_sfinae_basic template_sfinae_basic.cpp)
+add_executable(template_type_parameter_sfinae_guard src/template_type_parameter_sfinae_guard.cpp)
+add_executable(template_sfinae_basic src/template_sfinae_basic.cpp)
